# rules_weaver

./: .gitignore  ARCHITECTURE.md  BUILD.bazel  MODULE.bazel  README.md  TECHNICAL_REQUIREMENTS.md  WORKSPACE
.github/workflows/: README.md  manual-tests.yml  pr-tests.yml  update-checksums.yml
docs/: README.md  developer-guide.md
docs/advanced-topics/: README.md  checksum_automation.md  dependency_optimization.md  multi_platform_support.md  performance_optimization.md  real_weaver_binary_integration.md  remote_execution_optimization.md  weaver_docs.md  weaver_toolchain.md
docs/core-rules/: README.md  weaver_generate.md  weaver_library.md  weaver_repository.md  weaver_schema.md  weaver_validate.md
docs/examples/: README.md  basic_usage.md  end_to_end_test_prompt.md
docs/getting-started/: README.md  installation.md  quick_start.md
docs/reference/: README.md  api_reference.md  providers.md
docs/troubleshooting/: README.md  contributing.md  faq.md  migration_guide.md  troubleshooting.md
examples/: BUILD.bazel  README.md
examples/advanced/: BUILD.bazel  README.md  dependency_optimization_example.bzl  multi_platform_example.bzl  weaver_comprehensive_example.bzl  weaver_toolchain_example.bzl
examples/basic/: BUILD.bazel  README.md  weaver_generate_example.bzl  weaver_repository_example.bzl  weaver_validate_example.bzl
scripts/: update_checksums.py
tests/: BUILD.bazel  ORGANIZATION.md  README.md
tests/e2e/: BUILD.bazel  IMPLEMENTATION_SUMMARY.md  README.md  new_user_integration_test.bzl  test_runner.py  test_runner.sh  validate_test_structure.py
tests/e2e/test_workspace/: BUILD.bazel  WORKSPACE
tests/e2e/test_workspace/expected_outputs/: README.md
tests/e2e/test_workspace/schemas/: policies.yaml  sample.yaml
tests/error/: BUILD.bazel  README.md
tests/frameworks/: BUILD.bazel  README.md  comprehensive_test_runner.bzl  error_test_framework.bzl  integration_test_framework.bzl  performance_test_framework.bzl  unit_test_framework.bzl
tests/integration/: BUILD.bazel  README.md  dependency_integration_test.bzl  dependency_performance_test.bzl  direct_weaver_test.bzl  docs_integration_test.bzl  integration_test.bzl  library_integration_test.bzl  platform_integration_test.bzl  real_integration_test.bzl  real_weaver_binary_integration_test.bzl  real_weaver_integration_test.bzl  real_weaver_test.bzl  schema_integration_test.bzl  simple_integration_test.bzl  toolchain_integration_test.bzl  validate_integration_test.bzl
tests/performance/: BUILD.bazel  README.md  multi_platform_test.bzl  performance_test.bzl  remote_execution_test.bzl
tests/schemas/: BUILD.bazel  BUILD_library_example.bzl  another.yaml  another_policy.yaml  invalid_schema.yaml  policy.yaml  sample.yaml  test1.yaml  test2.yaml
tests/unit/: BUILD.bazel  README.md  dependency_test.bzl  docs_test.bzl  generate_test.bzl  library_test.bzl  repositories_test.bzl  schema_test.bzl  toolchain_test.bzl  validate_test.bzl
tests/utils/: BUILD.bazel  README.md  integration_test_targets.bzl  mock_weaver.py  mock_weaver_repository.bzl  real_weaver_test_config.bzl  run_integration_tests.py  run_real_weaver_tests.py  simple_real_weaver_test.bzl  test_config.bzl  test_utils.bzl  test_workspace.bzl
weaver/: BUILD.bazel  aspects.bzl  checksums.bzl  defs.bzl  extensions.bzl  platform_constraints.bzl  providers.bzl  repositories.bzl  toolchain_type.bzl  toolchains.bzl
weaver/internal/: BUILD.bazel  actions.bzl  monitoring.bzl  performance.bzl  utils.bzl
weaver/templates/: BUILD.bazel  default.html.template  default.md.template
