package(default_visibility = ["//visibility:public"])

# Main new user integration test - using sh_test instead of py_test
sh_test(
    name = "new_user_integration_test",
    srcs = ["test_runner.sh"],
    data = [
        "//tests/e2e/test_workspace:test_workspace_files",
        "//tests/schemas:sample.yaml",
        "//tests/schemas:policy.yaml",
        "test_runner.py",  # Include the Python script as data
    ],
    testonly = True,
    timeout = "long",
    tags = [
        "integration",
        "e2e",
        "manual",  # Mark as manual since it requires network access
    ],
)

# Simple test suite
test_suite(
    name = "e2e_test_suite",
    tests = [
        ":new_user_integration_test",
    ],
    testonly = True,
) 