"""
Integration tests for OpenTelemetry Weaver rules.

This directory contains integration tests for end-to-end workflows and component interactions.
"""

package(default_visibility = ["//visibility:public"])

# Load unittest for test targets
load("@bazel_skylib//lib:unittest.bzl", "unittest")

# Legacy integration test suites - commented out due to syntax errors
# load(":library_integration_test.bzl", "library_integration_test_suite")
# load(":schema_integration_test.bzl", "schema_integration_test_suite")
# load(":toolchain_integration_test.bzl", "toolchain_integration_test_suite")
# load(":validate_integration_test.bzl", "validate_integration_test_suite")
# load(":docs_integration_test.bzl", "docs_integration_test_suite")
# load(":dependency_integration_test.bzl", "dependency_integration_test_suite")
# load(":dependency_performance_test.bzl", "dependency_performance_test_suite")
# load(":real_integration_test.bzl", "real_integration_test_suite")
# load(":real_weaver_integration_test.bzl", "real_weaver_integration_test_suite")
# load(":simple_integration_test.bzl", "simple_integration_test_suite")
# load(":integration_test.bzl", "integration_test_suite")
# load(":platform_integration_test.bzl", "platform_integration_test_suite")

# Real Weaver binary integration tests
load(":real_weaver_binary_integration_test.bzl", "real_weaver_binary_all_tests")
load(":real_weaver_test.bzl", "real_weaver_simple_test")

# Integration test targets
# unittest.make(name = "library_integration_test", suite = library_integration_test_suite)
# unittest.make(name = "schema_integration_test", suite = schema_integration_test_suite)
# unittest.make(name = "toolchain_integration_test", suite = toolchain_integration_test_suite)
# unittest.make(name = "validate_integration_test", suite = validate_integration_test_suite)
# unittest.make(name = "docs_integration_test", suite = docs_integration_test_suite)
# unittest.make(name = "dependency_integration_test", suite = dependency_integration_test_suite)
# unittest.make(name = "dependency_performance_test", suite = dependency_performance_test_suite)
# unittest.make(name = "real_integration_test", suite = real_integration_test_suite)
# unittest.make(name = "real_weaver_integration_test", suite = real_weaver_integration_test_suite)
# unittest.make(name = "simple_integration_test", suite = simple_integration_test_suite)
# unittest.make(name = "integration_test", suite = integration_test_suite)
# unittest.make(name = "platform_integration_test", suite = platform_integration_test_suite)

# Real Weaver binary integration test targets
real_weaver_binary_all_tests()
real_weaver_simple_test()

# Test suite for all integration tests
test_suite(
    name = "all_integration_tests",
    tests = [
        # ":library_integration_test",
        # ":schema_integration_test",
        # ":toolchain_integration_test",
        # ":validate_integration_test",
        # ":docs_integration_test",
        # ":dependency_integration_test",
        # ":dependency_performance_test",
        # ":real_integration_test",
        # ":real_weaver_integration_test",
        # ":simple_integration_test",
        # ":integration_test",
        # ":platform_integration_test",
        # Real Weaver binary tests will be added automatically
    ],
    tags = ["integration"],
) 