"""
Unit tests for OpenTelemetry Weaver rules.

This directory contains unit tests for individual components and functions.
"""

package(default_visibility = ["//visibility:public"])

# Load unittest for test targets
load("@bazel_skylib//lib:unittest.bzl", "unittest")

# Legacy unit test suites - commented out due to syntax errors
load(":library_test.bzl", "weaver_library_test_suite")
load(":schema_test.bzl", "weaver_schema_test_suite")
load(":toolchain_test.bzl", "weaver_toolchain_test_suite")
load(":validate_test.bzl", "weaver_validate_test_suite")
load(":generate_test.bzl", "weaver_generate_test_suite")
# load(":docs_test.bzl", "docs_test_suite")
# load(":dependency_test.bzl", "dependency_test_suite")
# load(":repositories_test.bzl", "repositories_test_suite")

# Call the test suite functions
weaver_library_test_suite(name = "library_test")
weaver_schema_test_suite(name = "schema_test")
weaver_toolchain_test_suite(name = "toolchain_test")
weaver_validate_test_suite(name = "validate_test")
weaver_generate_test_suite(name = "generate_test")

# Test suite for all unit tests
test_suite(
    name = "all_unit_tests",
    tests = [
        ":library_test",
        ":schema_test",
        ":toolchain_test",
        ":validate_test",
        ":generate_test",
        # ":docs_test",
        # ":dependency_test",
        # ":repositories_test",
    ],
) 